--- a/gg-html-forms-radio.htm
+++ b/gg-html-forms-radio.htm
@@ -21,6 +21,7 @@
                 <li><a href="gg-html-forms-submit.htm">Text &amp; Submit</a></li>
                 <li><a href="gg-html-forms-radio.htm">Radio Button input</a></li>
                 <li><a href="gg-html-forms-drop-down.htm">Drop-down select</a></li>
+                <li><a href="gg-html-forms-datalist.htm">Datalist input</a></li>
             </ul>
         </nav>
         
@@ -28,6 +29,7 @@
             <input type="radio" name="gender" value="male" checked="yes"> Male<br>
             <input type="radio" name="gender" value="female"> Female<br>
             <input type="radio" name="gender" value="other"> Other<br>
+            <button type="button" onclick="alert('Good Choice!')">Submit</button>
         </form>
         
     </body>
