--- a/gg-html-forms-submit.htm
+++ b/gg-html-forms-submit.htm
@@ -21,19 +21,21 @@
                 <li><a href="gg-html-forms-submit.htm">Text &amp; Submit</a></li>
                 <li><a href="gg-html-forms-radio.htm">Radio Button input</a></li>
                 <li><a href="gg-html-forms-drop-down.htm">Drop-down select</a></li>
+                <li><a href="gg-html-forms-datalist.htm">Datalist input</a></li>
             </ul>
         </nav>
         
-        <form action="mailto:someone@example.com" method="post" enctype="text/plain">
+        <form action="https://www.w3schools.com/action_page.php">
             <fieldset>
                 <legend>Personal details:</legend>
                 First name:<br>
                 <input type="text" name="firstname" value="Mickey"><br>
                 Last name:<br>
                 <input type="text" name="lastname" value="Mouse"><br>
-                <br>
-                <input type="submit" value="Submit">
-            </fieldset>
+            </fieldset><br>
+            <p class="text-area">Description:</p>
+            <textarea name="description" rows="5" cols="30">A funny little cartoon mouse who has a thing for Minnie.</textarea>
+            <input type="submit" value="Submit">
         </form>
 
     </body>
