--- a/gg-html-forms-drop-down.htm
+++ b/gg-html-forms-drop-down.htm
@@ -22,6 +22,7 @@
                 <li><a href="gg-html-forms-radio.htm">Radio Button input</a></li>
                 <li><a href="gg-html-forms-drop-down.htm">Drop-down select</a></li>
                 <li><a href="gg-html-forms-datalist.htm">Datalist input</a></li>
+                <li><a href="gg-html-forms-output.htm">Output</a></li>
             </ul>
         </nav>
         
