Text and Submit tab edits
- addition of password field
- addition of reset button
- styling changes to give padding and margin to input elements

--- a/gg-html-forms-output.htm
+++ b/gg-html-forms-output.htm
@@ -32,7 +32,7 @@
             0
             <input class="range" type="range" id="a" name="a" value="50">
             100 +
-            <input type="number" id="b" name="b" value="50">
+            <input class="range" type="number" id="b" name="b" value="50">
             =
             <output name="x" for="a b"></output>
             <br><br>
