--- a/gg-html-forms-submit.htm
+++ b/gg-html-forms-submit.htm
@@ -33,10 +33,13 @@
                 <input type="text" name="firstname" value="Mickey"><br>
                 Last name:<br>
                 <input type="text" name="lastname" value="Mouse"><br>
+                Password:<br>
+                <input type="password" name="psw"><br>
             </fieldset><br>
             <p class="text-area">Description:</p>
             <textarea name="description" rows="5" cols="30">A funny little cartoon mouse who has a thing for Minnie.</textarea>
             <input type="submit" value="Submit">
+            <input type="reset" value="Reset">
         </form>
 
     </body>
