Addition of checkbox tab
- 1 new HTML file with checkbox example
- Changes to nav to include checkbox

--- a/gg-html-forms-checkbox.htm
+++ b/gg-html-forms-checkbox.htm
@@ -27,20 +27,17 @@
             </ul>
         </nav>
         
-        <form action="https://www.w3schools.com/action_page.php">
-            <fieldset>
-                <legend>Personal details:</legend>
-                First name:<br>
-                <input type="text" name="firstname" value="Mickey"><br>
-                Last name:<br>
-                <input type="text" name="lastname" value="Mouse"><br>
-                Password:<br>
-                <input type="password" name="psw"><br>
-            </fieldset><br>
-            <p class="text-area">Description:</p>
-            <textarea name="description" rows="5" cols="30">A funny little cartoon mouse who has a thing for Minnie.</textarea>
+        <p class="select">Select any car manufacturer you would potentially buy from:</p>
+        <form class="datalist" action="https://www.w3schools.com/action_page.php">
+            <input type="checkbox" name="audi" value="Audi"> Audi<br>
+            <input type="checkbox" name="alfa romeo" value="Alfa Romeo"> Alfa Romeo<br>
+            <input type="checkbox" name="bmw" value="BMW"> BMW<br>
+            <input type="checkbox" name="jaguar" value="Jaguar"> Jaguar<br>
+            <input type="checkbox" name="lexus" value="Lexus"> Lexus<br>
+            <input type="checkbox" name="mercedes" value="Mercedes"> Mercedes<br>
+            <input type="checkbox" name="volvo" value="Volvo"> Volvo<br>
+            <input type="checkbox" name="volkswagen" value="Volkswagen"> Volkswagen<br><br>
             <input type="submit" value="Submit">
-            <input type="reset" value="Reset">
         </form>
 
     </body>
