--- a/gg-html-forms-drop-down.htm
+++ b/gg-html-forms-drop-down.htm
@@ -23,6 +23,7 @@
                 <li><a href="gg-html-forms-drop-down.htm">Drop-down select</a></li>
                 <li><a href="gg-html-forms-datalist.htm">Datalist input</a></li>
                 <li><a href="gg-html-forms-output.htm">Output</a></li>
+                <li><a href="gg-html-forms-checkbox.htm">Checkboxes</a></li>
             </ul>
         </nav>
         
