--- a/gg-html-forms-submit.htm
+++ b/gg-html-forms-submit.htm
@@ -31,14 +31,18 @@
             <fieldset>
                 <legend>Personal details:</legend>
                 First name:<br>
-                <input type="text" name="firstname" value="Mickey"><br>
+                <input type="text" name="firstname" value="Mickey" required><br>
                 Last name:<br>
-                <input type="text" name="lastname" value="Mouse"><br>
+                <input type="text" name="lastname" value="Mouse" required><br>
+                Email address:<br>
+                <input type="email" name="email" required><br>
                 Password:<br>
-                <input type="password" name="psw"><br>
+                <input type="password" name="psw" required><br>
+                No. of teeth (0-20):<br>
+                <input type="number" min="0" max="20">
             </fieldset><br>
-            <p class="text-area">Description:</p>
-            <textarea name="description" rows="5" cols="30">A funny little cartoon mouse who has a thing for Minnie.</textarea>
+            <p class="text-area">Hobbies:</p>
+            <textarea name="description" rows="5" cols="30">Playing musical chairs and listening to thrash metal.</textarea>
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
         </form>
