Readonly addition to 'Last name:' field

--- a/gg-html-forms-submit.htm
+++ b/gg-html-forms-submit.htm
@@ -33,7 +33,7 @@
                 First name:<br>
                 <input type="text" name="firstname" value="Mickey" required><br>
                 Last name:<br>
-                <input type="text" name="lastname" value="Mouse" required><br>
+                <input type="text" name="lastname" value="Mouse" required readonly><br>
                 Email address:<br>
                 <input type="email" name="email" required><br>
                 Password:<br>
