--- a/gg-html-forms-submit.htm
+++ b/gg-html-forms-submit.htm
@@ -37,7 +37,7 @@
                 Email address:<br>
                 <input type="email" name="email" required><br>
                 Password:<br>
-                <input type="password" name="psw" required><br>
+                <input type="password" name="psw" minlength="6" required><br>
                 No. of teeth (0-20):<br>
                 <input type="number" min="0" max="20">
             </fieldset><br>
