--- a/gg-html-forms-drop-down.htm
+++ b/gg-html-forms-drop-down.htm
@@ -20,20 +20,22 @@
             <ul>
                 <li><a href="gg-html-forms-submit.htm">Text &amp; Submit</a></li>
                 <li><a href="gg-html-forms-radio.htm">Radio Button input</a></li>
-                <li><a href="gg-html-forms-drop-down.htm">Drop-down select</a></li>
+                <li><a href="gg-html-forms-drop-down.htm" class="active">Drop-down select</a></li>
                 <li><a href="gg-html-forms-datalist.htm">Datalist input</a></li>
                 <li><a href="gg-html-forms-output.htm">Output</a></li>
                 <li><a href="gg-html-forms-checkbox.htm">Checkboxes</a></li>
             </ul>
         </nav>
         
-        <p class="select">Please select your preferred car:</p>
-        <select name="cars">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="fiat">Fiat</option>
-            <option value="audi">Audi</option>
-        </select>
+        <div id="select">
+            <p class="select">Please select your preferred car:</p>
+            <select name="cars">
+                <option value="volvo">Volvo</option>
+                <option value="saab">Saab</option>
+                <option value="fiat">Fiat</option>
+                <option value="audi">Audi</option>
+            </select>
+        </div>
         
     </body>
 </html>
