--- a/gg-html-forms-datalist.htm
+++ b/gg-html-forms-datalist.htm
@@ -21,7 +21,7 @@
                 <li><a href="gg-html-forms-submit.htm">Text &amp; Submit</a></li>
                 <li><a href="gg-html-forms-radio.htm">Radio Button input</a></li>
                 <li><a href="gg-html-forms-drop-down.htm">Drop-down select</a></li>
-                <li><a href="gg-html-forms-datalist.htm">Datalist input</a></li>
+                <li><a href="gg-html-forms-datalist.htm" class="active">Datalist input</a></li>
                 <li><a href="gg-html-forms-output.htm">Output</a></li>
                 <li><a href="gg-html-forms-checkbox.htm">Checkboxes</a></li>
             </ul>
