--- a/gg-html-forms-output.htm
+++ b/gg-html-forms-output.htm
@@ -22,7 +22,7 @@
                 <li><a href="gg-html-forms-radio.htm">Radio Button input</a></li>
                 <li><a href="gg-html-forms-drop-down.htm">Drop-down select</a></li>
                 <li><a href="gg-html-forms-datalist.htm">Datalist input</a></li>
-                <li><a href="gg-html-forms-output.htm">Output</a></li>
+                <li><a href="gg-html-forms-output.htm" class="active">Output</a></li>
                 <li><a href="gg-html-forms-checkbox.htm">Checkboxes</a></li>
             </ul>
         </nav>
