--- a/gg-html-forms-radio.htm
+++ b/gg-html-forms-radio.htm
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="gg-html-forms-submit.htm">Text &amp; Submit</a></li>
-                <li><a href="gg-html-forms-radio.htm">Radio Button input</a></li>
+                <li><a href="gg-html-forms-radio.htm" class="active">Radio Button input</a></li>
                 <li><a href="gg-html-forms-drop-down.htm">Drop-down select</a></li>
                 <li><a href="gg-html-forms-datalist.htm">Datalist input</a></li>
                 <li><a href="gg-html-forms-output.htm">Output</a></li>
